Fix and wrap <div>

--- a/dropdown.css
+++ b/dropdown.css
@@ -2,6 +2,10 @@
     display: block;
   }
 
+
+div {
+    display: block;
+}
   .dropdown-submenu {
     position: relative;
 }
